// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-avatar-overflow-beta #render should render 0 avatars 1`] = `
<gux-avatar-overflow-beta role="menuitem">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button class="gux-avatar-overflow" tabindex="-1" aria-haspopup="true" aria-expanded="false">
      <span class="gux-avatar-overflow-wrapper">
        <span class="gux-avatar-overflow-content">
          +0
        </span>
      </span>
    </button>
    <div class="gux-menu-wrapper">
      <div role="menu" class="gux-menu-content">
        <slot>
        </slot>
      </div>
    </div>
  </template>
</gux-avatar-overflow-beta>
`;

exports[`gux-avatar-overflow-beta #render should render 1 avatar 1`] = `
<gux-avatar-overflow-beta role="menuitem">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button class="gux-avatar-overflow" tabindex="-1" aria-haspopup="true" aria-expanded="false">
      <span class="gux-avatar-overflow-wrapper">
        <span class="gux-avatar-overflow-content">
          +1
        </span>
      </span>
    </button>
    <div class="gux-menu-wrapper">
      <div role="menu" class="gux-menu-content">
        <slot>
        </slot>
      </div>
    </div>
  </template>
  <gux-avatar-overflow-item-beta role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" tabindex="-1">
        <span class="gux-avatar gux-accent-NaN">
          <slot name="image">
            <span class="gux-avatar-initials" aria-hidden="true">
              NaN
            </span>
          </slot>
        </span>
        <span>
        </span>
      </button>
    </template>
    <img src="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" alt="John Smith">
  </gux-avatar-overflow-item-beta>
</gux-avatar-overflow-beta>
`;

exports[`gux-avatar-overflow-beta #render should render 2 avatars 1`] = `
<gux-avatar-overflow-beta role="menuitem">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button class="gux-avatar-overflow" tabindex="-1" aria-haspopup="true" aria-expanded="false">
      <span class="gux-avatar-overflow-wrapper">
        <span class="gux-avatar-overflow-content">
          +2
        </span>
      </span>
    </button>
    <div class="gux-menu-wrapper">
      <div role="menu" class="gux-menu-content">
        <slot>
        </slot>
      </div>
    </div>
  </template>
  <gux-avatar-overflow-item-beta role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" tabindex="-1">
        <span class="gux-avatar gux-accent-NaN">
          <slot name="image">
            <span class="gux-avatar-initials" aria-hidden="true">
              NaN
            </span>
          </slot>
        </span>
        <span>
        </span>
      </button>
    </template>
    <img src="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" alt="John Smith">
  </gux-avatar-overflow-item-beta>
  <gux-avatar-overflow-item-beta role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" tabindex="-1">
        <span class="gux-avatar gux-accent-NaN">
          <slot name="image">
            <span class="gux-avatar-initials" aria-hidden="true">
              NaN
            </span>
          </slot>
        </span>
        <span>
        </span>
      </button>
    </template>
    <img src="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" alt="Jane Smith">
  </gux-avatar-overflow-item-beta>
</gux-avatar-overflow-beta>
`;

exports[`gux-avatar-overflow-beta #render should render 3 avatars 1`] = `
<gux-avatar-overflow-beta role="menuitem">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button class="gux-avatar-overflow" tabindex="-1" aria-haspopup="true" aria-expanded="false">
      <span class="gux-avatar-overflow-wrapper">
        <span class="gux-avatar-overflow-content">
          +3
        </span>
      </span>
    </button>
    <div class="gux-menu-wrapper">
      <div role="menu" class="gux-menu-content">
        <slot>
        </slot>
      </div>
    </div>
  </template>
  <gux-avatar-overflow-item-beta role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" tabindex="-1">
        <span class="gux-avatar gux-accent-NaN">
          <slot name="image">
            <span class="gux-avatar-initials" aria-hidden="true">
              NaN
            </span>
          </slot>
        </span>
        <span>
        </span>
      </button>
    </template>
    <img src="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" alt="John Smith">
  </gux-avatar-overflow-item-beta>
  <gux-avatar-overflow-item-beta role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" tabindex="-1">
        <span class="gux-avatar gux-accent-NaN">
          <slot name="image">
            <span class="gux-avatar-initials" aria-hidden="true">
              NaN
            </span>
          </slot>
        </span>
        <span>
        </span>
      </button>
    </template>
    <img src="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" alt="Jane Smith">
  </gux-avatar-overflow-item-beta>
  <gux-avatar-overflow-item-beta role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" tabindex="-1">
        <span class="gux-avatar gux-accent-NaN">
          <slot name="image">
            <span class="gux-avatar-initials" aria-hidden="true">
              NaN
            </span>
          </slot>
        </span>
        <span>
        </span>
      </button>
    </template>
    <img src="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" alt="John Doe">
  </gux-avatar-overflow-item-beta>
</gux-avatar-overflow-beta>
`;

exports[`gux-avatar-overflow-beta should build 1`] = `
<gux-avatar-overflow-beta role="menuitem">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button class="gux-avatar-overflow" tabindex="-1" aria-haspopup="true" aria-expanded="false">
      <span class="gux-avatar-overflow-wrapper">
        <span class="gux-avatar-overflow-content">
          +3
        </span>
      </span>
    </button>
    <div class="gux-menu-wrapper">
      <div role="menu" class="gux-menu-content">
        <slot>
        </slot>
      </div>
    </div>
  </template>
  <gux-avatar-overflow-item-beta role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" tabindex="-1">
        <span class="gux-avatar gux-accent-NaN">
          <slot name="image">
            <span class="gux-avatar-initials" aria-hidden="true">
              NaN
            </span>
          </slot>
        </span>
        <span>
        </span>
      </button>
    </template>
    <img src="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" alt="John Smith">
  </gux-avatar-overflow-item-beta>
  <gux-avatar-overflow-item-beta role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" tabindex="-1">
        <span class="gux-avatar gux-accent-NaN">
          <slot name="image">
            <span class="gux-avatar-initials" aria-hidden="true">
              NaN
            </span>
          </slot>
        </span>
        <span>
        </span>
      </button>
    </template>
    <img src="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" alt="Jane Smith">
  </gux-avatar-overflow-item-beta>
  <gux-avatar-overflow-item-beta role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" tabindex="-1">
        <span class="gux-avatar gux-accent-NaN">
          <slot name="image">
            <span class="gux-avatar-initials" aria-hidden="true">
              NaN
            </span>
          </slot>
        </span>
        <span>
        </span>
      </button>
    </template>
    <img src="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" alt="John Doe">
  </gux-avatar-overflow-item-beta>
</gux-avatar-overflow-beta>
`;
